# abb_machining_project

./: .gitignore  README.md
my_robot_project/: CMakeLists.txt  package.xml  test.txt
my_robot_project/include/my_robot_project/: model_spawner.hpp  pose_teacher.hpp  trajectory_planner.hpp
my_robot_project/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_robot_project/install/my_robot_project/share/my_robot_project/: package.bash  package.zsh
my_robot_project/launch/: project_launch.py
my_robot_project/log/: latest_build
my_robot_project/rviz/: config.rviz
my_robot_project/src/: model_spawner.cpp  pose_teacher.cpp  trajectory_planner.cpp
