<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_project</name>
  <version>0.0.0</version>
  <description>Robot project for industrial robotics assignment</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>
  <depend>abb_irb4600_ikfast</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>